project/manifests/deployment _backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-backend
  template:
    metadata:
      labels:
        app: todo-app-backend
    spec:
      containers:
        - name: todo-app-backend
          image: azska/dvk_project_backend:latest
          ports:
           - containerPort: 8001
