project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
      - name: cache-folder
        persistentVolumeClaim:
            claimName: todo-app-pvc
      containers:
        - name: todo-app
          image: azska/dvk_project
          volumeMounts:
          - name: cache-folder
            mountPath: /tmp/todo_app_images/
