project/manifests/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-frontend
  template:
    metadata:
      labels:
        app: todo-app-frontend
    spec:
      volumes:
      - name: cache-folder
        persistentVolumeClaim:
            claimName: todo-app-pvc
      containers:
        - name: todo-app-frontend
          image: azska/dvk_project_frontend
          volumeMounts:
          - name: cache-folder
            mountPath: /tmp/todo_app_images/
