project/manifests/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: project-postgres-stset
spec:
  serviceName: project-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb 
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - name: db-port
              containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: initdb
          configMap:
            name: project-postgres-configmap
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: project-postgres-svc
  labels:
    app: db
spec:
  ports:
  - port: 5432
    name: db-port
  clusterIP: None
  selector:
    app: postgresdb
