project/manifests/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-backend-service
spec:
  type: ClusterIP
  selector:
    app: todo-app-backend
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 8001
