project/manifests/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-frontend-service
spec:
  type: ClusterIP
  selector:
    app: todo-app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
